Fix PR c++/42766

gcc/cp/ChangeLog:
	PR c++/42766
	* cvt.c (build_expr_type_conversion): Look through OVERLOAD.

gcc/testsuite/ChangeLog:
	PR c++/42766
	* g++.dg/conversion/op6.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156020 138bc75d-0d04-0410-961f-82ee72b054a4